# Open-Games-Store

./: .gitignore  pyproject.toml
apps/accounts/: models.py
apps/accounts/migrations/: 0001_initial.py  0002_seed_default_roles.py
apps/core/: exceptions.py  permissions.py
apps/games/: admin.py  models.py  selectors.py  services.py
apps/games/api/: __init__.py
apps/games/api/v1/: __init__.py  filters.py  serializers.py  urls.py  views.py
apps/games/migrations/: 0001_initial.py  0002_developermembership_publishermembership.py
apps/games/tests/: __init__.py  factories.py  test_api.py  test_models.py  test_permissions.py  test_selectors.py  test_services.py
config/: api_router.py  settings.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
