[project]
name = "open-games-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.4.0",
    "drf-spectacular>=0.28.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "factory-boy>=3.3.1",
]
lint = [
    "ruff>=0.9.0",
]

